# ShrapnelMonorepo

./: .clang-format  .gitignore  .gitmodules  .licenserc.yaml  CMakeLists.txt  Doxyfile  PluginProcessor.cpp  PluginProcessor.h  README.md  abstract_dsp_juce.cpp  analysis_options.yaml  format.sh  noise_gate.c  pubspec.yaml
effects/abstract_dsp/: CMakeLists.txt  abstract_dsp_esp32.c  abstract_dsp_juce.cpp
effects/abstract_dsp/desktop/: abstract_dsp_juce.cpp  profiling.c
effects/abstract_dsp/docs/: fft.py
effects/abstract_dsp/esp32/: abstract_dsp_esp32.c  iir_3rd_order.S  iir_4th_order.S  profiling.c
effects/abstract_dsp/include/: abstract_dsp.h  delayline.h  dsp_concepts.h  fast_convolution.h  fast_fir.h  iir.h  iir_universal.h  profiling.h
effects/abstract_dsp/juce/: abstract_dsp_juce.cpp
effects/abstract_dsp/test/: test_block_processor.cpp  test_conv.cpp  test_delayline.cpp  test_fast_convolution.cpp  test_fast_fir.cpp  test_fast_fir_integration.cpp  test_iir.cpp
effects/abstract_dsp/test_esp32/: README.md  test_convolution.cpp
effects/abstract_dsp/universal/: delayline.cpp  delayline.h  delayline_c.cpp  fast_convolution.cpp  fast_fir.c  fast_fir.cpp  iir_universal.c
effects/chorus/: CMakeLists.txt
effects/chorus/include/: chorus.h
effects/chorus/src/: chorus.cpp
effects/gate/: CMakeLists.txt  noise_gate.c  noise_gate.cpp
effects/gate/include/: noise_gate.h
effects/valvestate/: CMakeLists.txt
effects/valvestate/include/: clipping.h  contour.h  fmv.h  gain_control.h  input_filter.h  valvestate.h  wave_shape.h
effects/valvestate/src/: Contour.cpp  clipping.cpp  contour.cpp  fmv.cpp  gain_control.cpp  input_filter.cpp  valvestate.cpp  wave_shape.cpp
effects/wah/: CMakeLists.txt  wah.cpp
effects/wah/dsp/: wah-smoothing.py  wah.py
effects/wah/include/: wah.h
firmware/: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.sh  sdkconfig  sdkconfig.backup  sdkconfig.defaults
firmware-rust/: .gitignore  CMakeLists.txt  Cargo.toml
firmware-rust/components-renamed-to-disable-esp-idf-magic/rust-firmware-rust/: CMakeLists.txt  Cargo.toml
firmware-rust/components/rust-firmware-rust/: CMakeLists.txt
firmware-rust/main/: CMakeLists.txt
firmware-rust/src/: main.rs
firmware/components/: CMakeLists.txt
firmware/components/api/: CMakeLists.txt
firmware/components/audio/: CMakeLists.txt
firmware/components/audio_events/: CMakeLists.txt
firmware/components/audio_param/: CMakeLists.txt
firmware/components/cmd_handling/: CMakeLists.txt
firmware/components/compiler_warning_flags/: CMakeLists.txt
firmware/components/console/: CMakeLists.txt
firmware/components/esp_http_websocket_server/: CMakeLists.txt
firmware/components/esp_midi_uart/: CMakeLists.txt
firmware/components/esp_persistence/: CMakeLists.txt
firmware/components/float_convert/: CMakeLists.txt  float_convert.h
firmware/components/hardware/: CMakeLists.txt
firmware/components/heap_tracing/: CMakeLists.txt
firmware/components/i2c/: CMakeLists.txt  i2c.c
firmware/components/i2s/: CMakeLists.txt  audio_processor.cpp  audio_processor.h  fmv.c  i2s.c  i2s.cpp  input_filter.c  process.c  process.cpp  process.h  profiling.c  profiling.cpp  speaker_coeffs.h
firmware/components/messages/: CMakeLists.txt
firmware/components/midi/: CMakeList.txt  (+1 more)
firmware/main/: CMakeLists.txt  esp-dsp.lf  main.c  main.cpp  server.cpp
firmware/test/: CMakeLists.txt
plugins/JUCE_static/: CMakeLists.txt
plugins/chorus/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/gate/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugins/shrapnel/: CMakeLists.txt  FixedBlockProcessor.h  PluginProcessor.cpp  PluginProcessor.h  parameter_adapter.h  plugin_main_thread.h  server.cpp  server.h  shrapnel_processor.h
plugins/valvestate/: CMakeLists.txt
plugins/vibrato/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
shrapnel/: CMakeLists.txt
shrapnel/audio_events/: CMakeLists.txt
shrapnel/cmd_handling/: CMakeLists.txt
shrapnel/compiler_warning_flags/: CMakeLists.txt
shrapnel/float_convert/: CMakeLists.txt
shrapnel/main_thread/: CMakeLists.txt
shrapnel/messages/: CMakeLists.txt
shrapnel/midi_handling/: CMakeLists.txt
shrapnel/midi_mapping/: CMakeLists.txt
shrapnel/midi_protocol/: CMakeLists.txt
shrapnel/os/: CMakeLists.txt
shrapnel/persistence/: CMakeLists.txt
shrapnel/presets/: CMakeLists.txt
test/: CMakeLists.txt  README.md  afl_toolchain.cmake  minimise_crashes.bash  test_crashes.bash
test/fuzz/: .gitignore
test/integration/: CMakeLists.txt  integration_test.cpp
test/minimised/: id:000000,sig:06,src:000000,op:havoc,rep:4  id:000001,sig:06,src:000355+000291,op:splice,rep:2  id:000002,sig:06,src:000416+000208,op:splice,rep:2  id:000002,sig:06,src:000416,op:havoc,rep:2  id:000002,sig:06,src:000422,op:havoc,rep:2  id:000003,sig:06,src:000304,op:ext_AO,pos:87  id:000003,sig:06,src:000422,op:havoc,rep:2  id:000003,sig:06,src:000452,op:havoc,rep:2  id:000004,sig:06,src:000304,op:ext_AO,pos:106  id:000004,sig:06,src:000578+000555,op:splice,rep:4  id:000005,sig:06,src:000119+000661,op:splice,rep:2  id:000005,sig:06,src:000561+000540,op:splice,rep:2  id:000005,sig:06,src:000580,op:havoc,rep:2  id:000005,sig:06,src:000650,op:ext_AO,pos:75  id:000006,sig:06,src:000127+000513,op:splice,rep:2  id:000006,sig:06,src:000198+000556,op:splice,rep:4  id:000006,sig:06,src:000623,op:havoc,rep:4  id:000006,sig:06,src:000650,op:ext_AO,pos:207  id:000007,sig:06,src:000171+000731,op:splice,rep:2  id:000007,sig:06,src:000590,op:havoc,rep:2  id:000007,sig:06,src:000646,op:havoc,rep:2  id:000007,sig:06,src:000650,op:ext_AO,pos:282  id:000008,sig:06,src:000650,op:ext_AO,pos:389  id:000008,sig:06,src:000711+000679,op:splice,rep:2  id:000009,sig:06,src:000127+000695,op:splice,rep:2  id:000009,sig:06,src:000650,op:ext_AO,pos:799  id:000010,sig:06,src:000425+000584,op:splice,rep:8  id:000010,sig:06,src:000650,op:ext_AO,pos:1031  id:000011,sig:06,src:000623,op:ext_AO,pos:124  id:000012,sig:06,src:000623,op:ext_AO,pos:184
test/support/: CMakeLists.txt
(+4781 files in other folders)
