[package]
name = "firmware-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
hal = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32","log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
