add_subdirectory(api)
add_subdirectory(audio)
add_subdirectory(audio_events)
add_subdirectory(audio_param)
add_subdirectory(cmd_handling)
add_subdirectory(compiler_warning_flags)
add_subdirectory(float_convert)
add_subdirectory(messages)
add_subdirectory(main_thread)
add_subdirectory(midi_handling)
add_subdirectory(midi_mapping)
add_subdirectory(midi_protocol)
add_subdirectory(os)
add_subdirectory(persistence)
add_subdirectory(presets)
