if(ESP_PLATFORM)
    return()
endif()
add_subdirectory(api)
add_subdirectory(audio_events)
add_subdirectory(audio_param)
add_subdirectory(cmd_handling)
add_subdirectory(shrapnel_console)
add_subdirectory(compiler_warning_flags)
add_subdirectory(float_convert)
add_subdirectory(hardware)
add_subdirectory(heap_tracing)
add_subdirectory(messages)
add_subdirectory(midi_handling)
add_subdirectory(midi_mapping)
add_subdirectory(midi_protocol)
add_subdirectory(os)
add_subdirectory(persistence)
add_subdirectory(presets)
